# moves

./: .gitattributes  CHANGELOG.MD  CHANGELOG.md  README.md  app.py  pyproject.toml
.github/workflows/: README.md  build-and-release.yml  ci.yml  manual-release.yml  version-bump.yml
docs/: README.MD  README.md  api-reference.md  architecture.md  cli.md  cli_commands.md  cli_design.md  cli_requirements.md  configuration.md  core-components.md  data-models.md  development.md  getting-started.md  index.md  installation.md  llm-integration.md  ml-models.md  overview.md  similarity-system.md  speech-processing.md  todo.md  troubleshooting.md  user-guide.md  utilities.md
docs/about/: README.MD  chunk-approach.md  chunks.md  data-models.md  editing-settings.md  section-approach.md  sections.md  similarity-calculations.md  speaker-management.md  streaming-stt.md  utilities.md
docs/components/: presentation-controller.md  section-producer.md  settings-editor.md  speaker-manager.md
docs/tr/: README.md  api-reference.md  architecture.md  cli.md  configuration.md  data-models.md  development.md  getting-started.md  ml-models.md  translator.py  troubleshooting.md  utilities.md
src/: app.py
src/core/: presentation_controller.py  settings_editor.py  speaker_manager.py
src/data/: llm_instruction.md  models.py  settings_template.yaml
src/utils/: data_handler.py  id_generator.py  logger.py  text_normalizer.py
tests/: __init__.py  conftest.py  test_app.py  test_basic_functionality.py
tests/core/: test_presentation_controller.py  test_settings_editor.py  (+1 more)
(+30 files in other folders)
