[project]
name = "moves"
version = "0.1.0"
description = "Presentation control, reimagined."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "instructor>=1.10.0",
    "jellyfish>=1.2.0",
    "litellm>=1.75.8",
    "num2words>=0.5.14",
    "pymupdf>=1.26.3",
    "pynput>=1.8.1",
    "rapidfuzz>=3.13.0",
    "ruamel-yaml>=0.18.14",
    "sentence-transformers>=5.1.0",
    "sherpa-onnx>=1.12.9",
    "sounddevice>=0.5.2",
]
