[project]
name = "moves"
version = "0.2.0"
description = "Presentation control, reimagined."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastembed>=0.7.2",
    "instructor[litellm]>=1.10.0",
    "jellyfish>=1.2.0",
    "num2words>=0.5.14",
    "numpy>=2.3.2",
    "pydantic>=2.11.7",
    "pymupdf>=1.26.3",
    "pynput>=1.8.1",
    "pyyaml>=6.0.2",
    "rapidfuzz>=3.13.0",
    "sherpa-onnx>=1.12.9",
    "sounddevice>=0.5.2",
    "tomlkit>=0.13.3",
    "typer>=0.16.1",
]

[project.scripts]
moves = "app:app"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
data = ["*.toml", "*.md"]